--- a/index.html
+++ b/index.html
@@ -1,2 +1,85 @@
-hello world!
-我爱你哟小蕊哥
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title></title>
+		<style type="text/css">
+			* {
+				margin: 0;
+				padding: 0;
+			}
+			ul li {
+				list-style: none;
+			}
+			.box {
+				width: 600px;
+				height: 600px;
+				background: #F5F5DC;
+				margin: 0 auto;
+				position: relative;
+				perspective: 1200px;
+			}
+			.box ul {
+				width: 300px;
+				height: 300px;
+				border: #F0F8FF 1px solid;
+				position: absolute;
+				left: 0;
+				right: 0;
+				top: 0;
+				bottom: 0;
+				margin: auto;
+				transform-style: preserve-3d;
+				transition: all 10s;
+			}
+			.box ul:hover {
+				transform: rotateX(360deg) rotateY(360deg);
+			}
+			.box ul li {
+				width: 300px;
+				height: 300px;
+				text-align: center;
+				line-height: 300px;
+				font-size: 48px;
+				position: absolute;
+			}
+			.box ul li:nth-child(1) {
+				background: rgba(255,0,0,.5);
+				transform: translateY(-150px) rotateX(90deg);
+			}
+			.box ul li:nth-child(2) {
+				background: rgba(0,255,0,.5);
+				transform: translateY(150px) rotateX(-90deg);
+			}
+			.box ul li:nth-child(3) {
+				background: rgba(0,0,255,.5);
+				transform: translateX(-150px) rotateY(-90deg);
+			}
+			.box ul li:nth-child(4) {
+				background: rgba(255,0,255,.5);
+				transform: translateX(150px) rotateY(90deg);
+			}
+			.box ul li:nth-child(5) {
+				background: rgba(255,255,0,.5);
+				transform: translateZ(150px);
+			}
+			.box ul li:nth-child(6) {
+				background: rgba(0,255,255,.5);
+				transform: translateZ(-150px) rotateY(180deg);
+			}
+		</style>
+	</head>
+	<body>
+		<div class="box">
+			<ul>
+				<li>小蕊哥</li>
+				<li>李小狗</li>
+				<li>李大狗</li>
+				<li>sb蕊</li>
+				<li>爱你哟小蕊哥</li>
+				<li>辣鸡蕊</li>
+			</ul>
+		</div>
+	</body>
+</html>
+
